2007-04-11    <tino@firebird.03.softkill.net>

	* strprintf.h (tino_str_vprintf_null): now uses functions from
	alloc.h

	* alloc.h (tino_realloc_null, tino_realloc_downsize_null): added
	as there are too many broken things out there: realloc might alter
	pointers even if downsizing.  And be sure that if it fails on
	downsizing the old unharmed buffer is returned.  (Yes, I'm
	paraniod.)
	(tino_malloc): added for hooks

	* sock.h (tino_sock_accept_addr_intr, tino_sock_accept_intr):
	added

	* alarm.h (tino_alarm_is_pending): added as clean interface to
	tino_alarm_pending

2007-04-10    <tino@firebird.03.softkill.net>

	* hup.h: Now uses signals.h, too (and better commented)
	(tino_hup_check, tino_hup_check_if): added
	(tino_hup_handler): prototype changed such that lazy people like
	me cannot forget to enable HUP processing.  Also improved
	usability: The handler now can ignore the default action.  Changes
	to existing programs are small: tino_hup_handler(fn) now becomes
	tino_hup_handler(-1, fn, NULL), ignore the additional parameter on
	the handler function and let it return 1.

	* alarm.h: now uses new signal.h, as it's much too complicated to
	use signals directly

	* signals.h: added for signal handling.  For some reason I found
	an old Linux distro where alarm.h was failing as signals were
	blocked there.  As this must be explicitely fixed, there is now
	is this new include.

2007-04-07    <tino@firebird.03.softkill.net>

	* str.h (tino_str_unescape_single, tino_str_unescape): added

	* data.h (tino_data_write_escape, tino_data_printf): added

	* buf_line.h (tino_buf_line_scan): comments improved

	* getopt.h (tino_getopt_hook): too many args added

2007-04-04    <tino@firebird.03.softkill.net>

	* getopt.h (tino_getopt_var_set_arg_imp): time calculation
	corrected

	* alarm.h (tino_alarm_run): funny bug: now delta is calculated
	correctly.

2007-04-03    <tino@firebird.03.softkill.net>

	* sleep.h (tino_nanosleep, tino_sleep, tino_msleep, tino_usleep) 